# dotfiles

./: .gitignore  Brewfile.agent  CHANGELOG.md  Makefile  README.md  bootstrap.sh  brew.sh  test-auth.sh
.agent/execplans/: interactive-startup-latency.md  local-coding-agent-profile.md  scoped-human-secrets.md
.github/: PULL_REQUEST_TEMPLATE.md
dev/PR/: PR_agent-consolidate-secret-mappings.md  PR_agent-fix-inherited-profile-guards.md  PR_agent-macos-local-coding-agents.md  PR_agent-optimize-interactive-startup.md  PR_agent-scoped-human-secrets.md
docs/: MACOS_SETUP.md  SECRETS_MANAGEMENT.md  SPEC.md
home/: .bash_profile  .bash_prompt  .bashrc  .gitconfig  .gitignore  .inputrc  .profile  .vimrc
home/.config/dotfiles/lib/: secrets.bash
home/.config/dotfiles/profiles/: agent.bash  human.bash
home/.config/dotfiles/secrets/: agent.env
home/.config/git/: aliases  allowed_signers  colors  config
home/.local/share/bash/: .aliases  aliases.sh  aws-functions.sh  exports.sh  functions.sh  git-functions.sh  load-secrets.sh  paths.sh  tf-functions.sh  utility-functions.sh
iTerm/: com.googlecode.iterm2.plist
os/arch/: pacman.sh  pkgs
os/ubuntu/: apt.sh  pkgs  refresh-proton-repo.sh  sources  sources-ppa  sources.list.default
tests/: agent_profile.bats  deployment.bats  human_secrets.bats  interactive_latency.bats
tools/: agent-doctor.sh  deploy-agent.sh  load-secrets-macos.sh  secrets-config.sh
tools/load-secrets/: Cargo.toml
tools/load-secrets-go/: README.md  go.mod  go.sum  main.go
tools/load-secrets/src/: load-secrets.rs  main.rs
(+1 files in other folders)
