[package]
name = "load-secrets"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dirs = "5.0"
md5 = "0.7"
futures = "0.3"
aes-gcm = "0.10.3"
rand = "0.8"
base64 = "0.21"
